[#11] redis config 설정